Implement log caching for individual participants, to avoid recalculating all data when new participants are added. Implemented error distance calculations. Added plots for error distance. Minor presentation improvement to two-factor plots.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-*/.ipynb_checkpoints/*.ipynb
+*/.ipynb_checkpoints/*
 .Rproj.user
 .RData
 .Rhistory
-*/Logs/*
-*/Touchless_Slider_Experiment/Analysis/Logs/
+*Logs/*
+*/Touchless_Slider_Experiment/Analysis/Logs
